--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "author": "Munita",
+  "description": "Don't know what gonna happen but something will",
 	"name": "fcc-learn-npm-package-json",
 	"dependencies": {
 		"express": "^4.14.0"
