--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "description": "Don't know what gonna happen but something will",
   "keywords": ["freecodecamp", "course", "101", "valley of despair"],
   "license": "MIT",
+  "version": "1.0.0",
 	"name": "fcc-learn-npm-package-json",
 	"dependencies": {
 		"express": "^4.14.0"
